# bilby

./: .gitignore  pyproject.toml
data/: contigs.bed  mseqs_unmap.npy
data/tfrecords/: test-0.err  test-1.err  test-2.err  train-0.err  train-1.err  train-10.err  train-11.err  train-2.err  train-3.err  train-4.err  train-5.err  train-6.err  train-7.err  train-8.err  train-9.err  valid-0.err  valid-1.err  valid-2.err
src/bilby/: blocks.py  dataset.py  dataset_iterators.py  dna.py  dynconv.py  flash.py  mixconv.py  models.py  poisson.py  selectssm.py  snps.py  ssmrecscan.py  state.py  transformer.py  weightvec.py
src/bilby/scripts/: attention.py  h5get.py  hound_snp.py  mrc_test.py  preprocess_xxj.py  test_augment_xxj.py  test_xxj.py  testflash.py  testssm.py  train.py
src/xolo/: flash_enformer.py  hyena.py  memprof.py  multires.py  pool.py  rope_flax.py  snps.py  state.py  vcf.py  xxj.py
src/xolo/scripts/: add_xxj_to_tfr.py  parse_recount3_xxj.py  siren_test.py  ssmprof.py  unpickle.py
