[project]
name = "bilby"
version = "1.0.0"
dependencies = [
    "jax >= 0.4.14",
    "jax-smi >= 1.0.3",
    "flax >= 0.7.2",
    "optax >= 0.0.9",
    "numpy >= 1.19.5",
    "scipy >= 1.5.4",
    "tensorflow >= 2.4.0",
    "tensorflow_datasets >= 4.2.0",
    "natsort >= 8.4.0",
    "jsonargparse >= 4.27.0",
    "jsonnet >= 0.20.0",
    "einops >= 0.7.0",
    "pysam >= 0.22.0",
]